--- a/HW 9.Rmd
+++ b/HW 9.Rmd
@@ -81,6 +81,12 @@ Note that these are yearly observations and that the response is number of days 
 1) Make a nice looking time series plot of the time series.
 
     ```{r p1}
+bts$Year <- seq(1869, 1996, by = 1)    
+bts <- ts(bts, start = 1869, end = 1996)
+
+plot(Days ~ Year, data = bts, type = "l", lwd = 2, col = "blue",
+     main = "Days of Ice on Baikal Lake")    
+
 ```
 
 2) Fit an ARMA(17,0) using the arima function and describe the roots discussing
