--- a/HW 9.Rmd
+++ b/HW 9.Rmd
@@ -95,11 +95,14 @@ plot(Days ~ Year, data = bts, type = "l", lwd = 2, col = "blue",
     
 fit1 <- arima(bts, order = c(17, 0, 0)) 
 roots <- polyroot(c(1, -fit1$coef[1:17]))    
-table <- data.frame(roots, Mod(roots), Period = (2*pi)/abs(Arg(roots)))
+table <- data.frame(roots, Mod(roots), Period = (2*pi)/abs(Arg(roots)), 
+                    Stationary = c(rep("Non-Stationary", 17)), 
+                    QuasiPeriod = )
 
-colnames(table) <- c("Roots", "Mod(Roots)", "Period")
 
-pander(table[order(table[, 2]), ])
+colnames(table) <- c("Roots", "Mod(Roots)", "Period", "Stationarity")
+
+pander(table[order(table[, 3]), ])
 ```
 
 a) stationarity and
