--- a/HW 9.Rmd
+++ b/HW 9.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "HW 8"
+title: "HW 9"
 author: "Brandon Fenton, Allison Theobold and Matthew Pettigrew"
 date: "Due: December 7, 2016"
 output:
@@ -83,7 +83,7 @@ Note that these are yearly observations and that the response is number of days 
     ```{r p1, echo = FALSE}
 Year <- seq(1869, 1996, by = 1)    
 bts <- ts(bts, start = 1869, end = 1996)
-
+par(mgp=c(2,1,0))
 plot(Days ~ Year, data = bts, type = "l", lwd = 2, col = "blue",
      main = "Days of Ice on Baikal Lake")    
 
