--- a/HW 9.Rmd
+++ b/HW 9.Rmd
@@ -220,9 +220,13 @@ eacf(dbts)
     ```{r p8}
     
 dbts.MA1 <- arima(dbts, order=c(0,0,1))
+pander(dbts.MA1)
 
 ```
 
+  $$\widehat{y_t} = -0.1766 + y_{t-1} + \widehat{e_t} - \widehat{e_{t-1}}$$
+
+  $$\widehat{y_t-y_{t-1}} = \widehat{\Delta y} = -0.1766 + \widehat{e_t} - \widehat{e_{t-1}}$$
 
 
 9) Report the confidence interval for the intercept from the model in #8. Discuss what the test using this confidence interval tells you in this model and how it addresses one of the questions of interest to the researcher. 
